# synthetic-profile-generator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  install.sh  main.py  pyproject.toml
examples/: sample_batch_us.csv  sample_profile_br.json
scripts/: build_city_catalog.py
synthetic_profiles/: __init__.py  bootstrap.py
synthetic_profiles/api/: app.py
synthetic_profiles/cli/: __init__.py  app.py
synthetic_profiles/config/: logging.py  settings.py
synthetic_profiles/identifiers/: __init__.py  base.py  brazil_cpf.py  placeholders.py
synthetic_profiles/locales/: __init__.py  base.py  iso3166.py
synthetic_profiles/locales/countries/: __init__.py  cities.py  city_catalog.json  name_pools.py  starter_packs.py  subdivisions.py
synthetic_profiles/models/: enums.py  schemas.py
synthetic_profiles/providers/: base.py  fallback_email.py  simplelogin.py
synthetic_profiles/services/: __init__.py  age_generator.py  country_registry.py  email_generation.py  family_generator.py  gender_resolver.py  locale_resolver.py  location_generator.py  name_generator.py  output_formatter.py  password_generator.py  profile_generator.py
synthetic_profiles/utils/: exceptions.py  randomizer.py
tests/: test_api_cli.py  test_country_registry.py  test_email_and_identifiers.py  test_generation_services.py  test_profile_generator.py
