[project]
name = "synthetic-profile-generator"
version = "0.1.0"
description = "Gerador de perfis sintéticos para QA, demonstrações, staging e testes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "typer>=0.16.0,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[project.scripts]
synthetic-profile-generator = "synthetic_profiles.cli.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["synthetic_profiles*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "RUF"]
ignore = ["S311"]
